--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -1,7 +1,15 @@
 % !TEX root = ../main.tex
 
-\section{Limitations and Challenges for Blockchain Technology}
+%TODO: Add back in if this makes it into the main body of the paper. Even in the appendix this could be added back.
+%\subsection{Academic Literature Review}
+%As part of the grounded theory analysis, the data revealed several open research challenges related to Blockchain technology.
+%In regards to these challenges, we conducted a review of academic literature to identify what research has already been done and what the academic community thinks of these challenges.
+%These challenges, along with the relevant paper references, are discussed in Section~\ref{sec:research-challenges}.
+
+\section{Challenges for Blockchain Technology}
 \label{sec:challenges}
+
+In this section, we describe challenges and limitations that must be addressed when building applications for Blockchain technology.
 
 %\paragraph{Scalability of public blockchains: transaction costs and bandwidth, emergent centralization, and energy consumption}
 \subsection{Blockchain scalability and performance}
