--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -151,10 +151,10 @@ In both of these situations, our research notes kept track of what was explicitl
 \subsubsection{Stage 4---Theory Generation}
 In the fourth and final stage, we used the concepts, categories, and connections derived from the first three stages of our grounded theory, along with our research notes and researcher expertises to derive several theories (i.e., research results from our analysis) regarding Blockchain technology.
 First, we subdivided the technical properties into three categories that give a high-level description of what Blockchain technology is (see Section~\ref{sec:blockchain}).
-Second, we extracted the capabilities, limitations/challenges, and use cases that are most relevant to Blockchain technology (see Section~\ref{sec:capabilities}, \ref{sec:challenges}, and \ref{sec:use-cases}, respectively).
-Third, we described how Blockchain technology differs from other distributed technologies (see Section~\ref{sec:distributed-comparison}) and identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology (see Section~\ref{sec:should-i-use-it}).
-Finally, we found that there is a \\
-clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
+Second, we extracted Blockchain technology's capabilities (Section~\ref{sec:capabilities}), use cases (Section~\ref{sec:use-cases}), and related challenges (Section~\ref{sec:challenges}).
+Third, we found that there is a clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
+%Third, we described how Blockchain technology differs from other distributed technologies (see Appendix~\ref{sec:distributed-comparison}) and identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology (see Section~\ref{sec:should-i-use-it}).
+
 
 \subsection{Limitations}
 Due to the nature of grounded theory, our analysis of the data represents one view on that data.
@@ -165,9 +165,3 @@ To address this limitation, we will make the documents we reviewed and our codin
 Instead of citing each of the works evaluated as part of grounded theory analysis, we are instead making these papers available as a research artifact.
 This artifact includes the documents, codes and their associated references to the papers from stage 1 of the grounded theory analysis, and the collated concepts from stage 2 of the grounded theory analysis.
 This data is available at [redacted].
-
-%TODO: Add back in if this makes it into the main body of the paper. Even in the appendix this could be added back.
-%\subsection{Academic Literature Review}
-%As part of the grounded theory analysis, the data revealed several open research challenges related to Blockchain technology.
-%In regards to these challenges, we conducted a review of academic literature to identify what research has already been done and what the academic community thinks of these challenges.
-%These challenges, along with the relevant paper references, are discussed in Section~\ref{sec:research-challenges}.
