--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,71 +1,17 @@
-\section{Other Results}
+\section{Discussion}
 In this section we discuss the remaining results from our grounded theory work.
 
-\subsection{Relationship to other distributed systems}
-\label{sec:distributed-comparison}
-Blockchain technology fits within the broader family of distributed systems.
-At the highest level, Blockchain technology is a type of decentralized database.
-To help readers situate Blockchain technology within this greater ecosystem we have created a taxonomy and a flowchart based on that taxonomy (see Figure~\ref{fig:blockchainFlowchart}).
-
-\begin{figure*}
-	\centering
-	\includegraphics[width=.75\textwidth]{figures/BlockchainFlowchart}
-	\caption{Comparing decentralized databases. Blockchain is highlighted in the bottom right corner.}
-	\label{fig:blockchainFlowchart}
-\end{figure*}
-
-The first property in our taxonomy considers who has the authority to manage and update the database: \emph{what is the governance model?} In a centrally governed database (``Centralized''), a single entity performs these tasks. Alternatively, the system can use a consensus protocol to allow for decentralized governance (``Decentralized'').
-
-Next, we consider the security model by asking \emph{where is the root of trust?}
-This refers to the entity or entities that must behave honestly in order for the system to be secure.
-In typical database systems, trust is rooted in the maintainer (``Maintainer'')---for example, using AWS cloud storage requires that you trust Amazon.
-Alternatively, trust can be rooted in the design of the system itself (``System''), though this is only possible if the system stores sufficient provenance for it to be audited to confirm that the system is functioning as intended.
-
-The next question is \emph{what is auditable?}
-In the worst case, nothing is auditable (``Nothing'').
-Systems can use an authenticated data structure~\cite{tamassia2003authenticated} to ensure that their current state can be audited (``Current state'').
-If the state also contains a history of the system (e.g., a ledger), then the use of an authenticated data structure allows for the provenance of the system to also be audited (``Provenance'').
-In both cases, it is necessary that these databases be monitored to ensure that they never enter an invalid state, even temporarily.
-In the case of decentralized systems, the decentralized partners can act as monitors.
-
-Finally, we can classify systems by asking \emph{what is it resilient against?}
-In particular, we considered with three resiliency properties---(1) is it resilient to accidental data loss (``Data loss''), (2) is it possible to detect that data has been malicious altered (``Detect''), (3) and is it possible to prevent malicious updates (``Prevent'').
-Systems with centralized governance are only able to detect malicious updates as the monitors can detect the attack but cannot prevent the malicious update from being replicated.
-If we modify the system to allow monitors to play this role, they have become consensus partners and we now have a decentralized database.
-
-\subsection{Is Blockchain a Good Fit for My Project?}
-\label{sec:should-i-use-it}
-
-% Jeremy: Internalize and cite the paper: What Blockchain Alternative Do You Need?
-
-In Figure~\ref{fig:blockchainFlowchart}, systems increase in complexity and overhead as they move down or to the right.
-As such, it is usually preferable to select the first system in the flowchart that meets all of the desired properties.
-While Blockchain provides the most functionality, it is also the most complex of the related systems.
-As such, while it can be used in place of simpler systems (e.g., a replicated database), we recommend Blockchain technology only be used if the application has most of the following needs:
-
-\begin{enumerate}
-	\item It requires shared governance and operation.
-	\item Resilience is necessary to prevent data loss and malicious updates.
-	\item It is necessary or desirable to store provenance for the system or the resources managed or controlled by the system.
-	\item It requires that the system be audited, particularly if there is a desire to trust the system itself and not the system's maintainer(s).
-\end{enumerate}
-
 \subsection{Private Governance}
-\snote{Potentially more broadly about governance.}
-
-In our survey of the industrial literature, we encountered several systems that claimed to be Blockchain systems, but which did not have shared governance.
-These systems resembled Blockchain systems, but with one critical difference: all the miners were controlled by a single entity.
+In our survey of the industrial literature, we encountered several proposals for Blockchain technology that used a centralized governance model where all miners are controlled by a single entity.
 The most prominent example of a private governance system is IBM's HyperLedger Fabric.
-Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM manage all of the miners.
+Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM run all of the miners.
 
 Ultimately, we do not classify such systems as Blockchain technology.
 First, these systems do not have shared governance, which we identify as the key component of Blockchain technology.
 Second, the party governing the system still represents a single-point of failure.
 While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a sufficient compromise in the operating organization would lead to a compromise in the Blockchain system.
 Third, there is nothing that prevents the governing party from deleting or modifying data; even if such changes could be detected, the data itself is not replicated outside the organization and would be lost.
-Finally, most of the private governance systems are overly complex for what they are trying to accomplish.
-Without the need for shared governance, many of these systems could be better implemented as a replicated monitored database.
-
+This is not to say that such systems lack value---such an evaluation is beyond the scope of this paper---but rather that we believe these types of systems are distinct from the more decentralized Blockchain technology.
 
 \subsection{Normative and Technical Properties are Cleanly Separable}
 \label{sec:normative}
@@ -90,9 +36,6 @@ The fact that this separation occurred naturally indicates that grounded theory 
 In general, the normative properties dealt with idealogical-driven goals that could accomplished using Blockchain technology.
 For example, several normative properties dealt with public participation, community ownership, censorship resistance, and transparency of Blockchain systems.
 Bitcoin demonstrates that Blockchain technology can be used to achieve these properties, but it is not the case that all Blockchain systems will accomplish these goals---for example, Ripple is a Blockchain system without public participation.
-
-\section{Discussion}
-In this section, we summarize a few remaining discussion points motivated by our grounded theory analysis of Blockchain technology.
 
 \subsection{Lack of Privacy and Data Discoverability}
 In the literature we found a common misconception that Blockchain technology inherently provided confidentiality for information stored within it.
